--- a/User/settings.json
+++ b/User/settings.json
@@ -1,40 +1,18 @@
 {
-    "latex-workshop.latex.recipes": [
-        {
-            "name": "latexmk",
-            "tools": [
-                "latexmk", //タイプセットに使うtoolの名前
-            ]
-        }
-    ],
-    "latex-workshop.latex.tools": [ //タイプセットに使うtool一覧
-        {
-            "name": "latexmk",
-            "command": "latexmk",
-            "args": [
-                "%DOC%"
-            ]
-        }
-    ],
-    "latex-workshop.view.pdf.viewer": "tab",
     "editor.renderControlCharacters": true,
-    "latex-workshop.chktex.enabled": false,
-    "workbench.startupEditor": "welcomePage",
     "editor.rulers": [
         80
     ],
-    "editor.fontSize": 14,
-    "editor.fontFamily": "Ricty Diminished",
     "editor.tabSize": 2,
+    "[csharp]": {
+        "editor.tabSize": 4
+    },
     "editor.renderWhitespace": "all",
     "files.insertFinalNewline": true,
-    "ruby.lint": {
-        "rubocop": true
-    },
     "explorer.confirmDragAndDrop": false,
     "extensions.ignoreRecommendations": true,
     "window.zoomLevel": 1,
-    "workbench.colorTheme": "Monokai Dark Soda",
+    "workbench.colorTheme": "Monokai",
     // [markdown] 言語に対して上書きされるエディター設定を構成します。
     "[markdown]": {
         "editor.wordWrap": "on",
@@ -43,5 +21,114 @@
     "editor.formatOnPaste": true,
     "editor.formatOnSave": true,
     "editor.formatOnType": true,
-    "editor.minimap.renderCharacters": false
+    "editor.minimap.renderCharacters": false,
+    "typescript.updateImportsOnFileMove.enabled": "always",
+    "workbench.activityBar.visible": false,
+    "editor.wordWrap": "on",
+    "workbench.iconTheme": "vscode-icons",
+    "breadcrumbs.enabled": true,
+    "go.goroot": null,
+    "go.gopath": null,
+    "editor.fontSize": 14,
+    "editor.fontFamily": "'Ricty', Menlo, Monaco, 'Courier New', monospace",
+    "editor.snippetSuggestions": "top",
+    "editor.tabCompletion": "on",
+    "files.eol": "\n",
+    "files.autoGuessEncoding": true,
+    "terminal.integrated.rendererType": "dom",
+    "terminal.integrated.fontFamily": "\"Ricty for Powerline\"",
+    "terminal.external.osxExec": "iTerm.app",
+    // 設定: LaTeX Workshop
+    // LaTeX Workshop ではビルド設定を「Tool」と「Recipe」という2つで考える
+    //   Tool: 実行される1つのコマンド。コマンド (command) と引数 (args) で構成される
+    //   Recipe: Tool の組み合わわせを定義する。Tool の組み合わせ (tools) で構成される。
+    //           tools の中で利用される Tool は "latex-workshop.latex.tools" で定義されている必要がある。
+    // latex-workshop.latex.tools: Tool の定義
+    "latex-workshop.latex.tools": [
+        // latexmk を利用したビルドコマンド
+        {
+            "name": "latexmk",
+            "command": "latexmk",
+            "args": [
+                "-f",
+                "-gg",
+                "-pv",
+                "-synctex=1",
+                "-interaction=nonstopmode",
+                "-file-line-error",
+                "-pdfdvi",
+                "%DOC%"
+            ]
+        },
+    ],
+    // latex-workshop.latex.recipes: Recipe の定義
+    "latex-workshop.latex.recipes": [
+        // ビルドレシピ
+        {
+            "name": "latexmk",
+            "tools": [
+                "latexmk"
+            ]
+        },
+    ],
+    // latex-workshop.latex.magic.args: マジックコメント付きの LaTeX ドキュメントをビルドする設定
+    // '%!TEX' で始まる行はマジックコメントと呼ばれ、LaTeX のビルド時にビルドプログラムに解釈され、
+    // プログラムの挙動を制御する事ができる。
+    // 参考リンク: https://blog.miz-ar.info/2016/11/magic-comments-in-tex/
+    "latex-workshop.latex.magic.args": [
+        "-f",
+        "-gg",
+        "-pv",
+        "-synctex=1",
+        "-interaction=nonstopmode",
+        "-file-line-error",
+        "%DOC%"
+    ],
+    // latex-workshop.latex.clean.fileTypes: クリーンアップ時に削除されるファイルの拡張子
+    // LaTeX 文書はビルド時に一時ファイルとしていくつかのファイルを生成するが、最終的に必要となるのは
+    // PDF ファイルのみである場合などが多い。また、LaTeX のビルド時に失敗した場合、失敗時に生成された
+    // 一時ファイルの影響で、修正後のビルドに失敗してしまう事がよくある。そのため、一時的なファイルを
+    // 削除する機能 (クリーンアップ) が LaTeX Workshop には備わっている。
+    "latex-workshop.latex.clean.fileTypes": [
+        "*.aux",
+        "*.bbl",
+        "*.blg",
+        "*.idx",
+        "*.ind",
+        "*.lof",
+        "*.lot",
+        "*.out",
+        "*.toc",
+        "*.acn",
+        "*.acr",
+        "*.alg",
+        "*.glg",
+        "*.glo",
+        "*.gls",
+        "*.ist",
+        "*.fls",
+        "*.log",
+        "*.fdb_latexmk",
+        "*.synctex.gz",
+        // for Beamer files
+        "_minted*",
+        "*.nav",
+        "*.snm",
+        "*.vrb",
+    ],
+    // latex-workshop.view.pdf.viewer: PDF ビューアの開き方
+    // VSCode 自体には PDF ファイルを閲覧する機能が備わっていないが、
+    // LaTeX Workshop にはその機能が備わっている。
+    // "tab" オプションを指定すると、今開いているエディタを左右に分割し、右側に生成されたPDFを表示するようにしてくれる
+    // この PDF ビュアーは LaTeX のビルドによって更新されると同期して内容を更新してくれる。
+    "latex-workshop.view.pdf.viewer": "tab",
+    // latex-workshop.latex.autoClean.run: 一時ファイルのクリーンアップを行うかどうか
+    // 上記説明にもあったように、ビルド失敗時に生成された一時ファイルが悪影響を及ぼす事があるため、自動で
+    // クリーンアップがかかるようにしておく。
+    "latex-workshop.latex.autoClean.run": "onFailed",
+    // latex-workshop.latex.autoBuild.run: .tex ファイルの保存時に自動的にビルドを行うかどうか
+    // LaTeX ファイルは .tex ファイルを変更後にビルドしないと、PDF ファイル上に変更結果が反映されないため、
+    // .tex ファイルの保存と同時に自動的にビルドを実行する設定があるが、文書が大きくなるに連れてビルドにも
+    // 時間がかかってしまい、ビルドプログラムの負荷がエディタに影響するため、無効化しておく。
+    "latex-workshop.latex.autoBuild.run": "onFileChange",
 }
